10773
I'm tentatively marking this as a regression and promoting it to blocker. Strictly speaking, this isn't a regression, because it didn't use to compile in 2.10.x, but let's discuss.

{code}
13:26 ~/Projects/210x/sandbox (2.10.x)$ s
Test.scala:8: error: erroneous or inaccessible type
  locally {
          ^
one error found
{code}
